# faiss-rest-api

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
examples/: usage.js
src/: main.cpp
